Debugging an issue where static-menu background-image was squished at the start of dynamic menu display. Refactoring dynamic menu object and style.

--- a/assets/css/pages/showcase-panels.css
+++ b/assets/css/pages/showcase-panels.css
@@ -30,6 +30,10 @@ footer li {
     background-color: hsla(0, 0%, 100%, 1);
 }
 
+.menu-splitter {
+    background-color: hsla(188, 92%, 54%, 1);
+}
+
 /********************************/
 /*           GLOBALS            */
 /********************************/
@@ -172,36 +176,40 @@ h2 {
 /*     DYNAMIC MENU     */
 /************************/
 
-.blurry-layer {
+.dynamic-menu-container {
+    height: 100vh;
+    position: fixed;
     width: 100%;
+}
+
+.blurry-layer {
     height: 100%;
-    position: absolute;
-    top: 0;
+    position: fixed;
     left: 0;
+    top: 0;
+    width: 100%;
     z-index: 98;
 }
 
 .dynamic-menu-layer {
-    width: 0px;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 98;
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 0px;
+    z-index: 99;
 }
 
-
-
 .close-menu-layer {
-    width: 100%;
-    height: 11vh;
     display: flex;
     flex-direction: row;
+    height: 11vh;
     justify-content: flex-end;
     position: absolute;
     top: 0;
+    width: 100%;
 }
 
 .close-menu-layer button {
@@ -210,16 +218,16 @@ h2 {
 }
 
 #close-menu-button {
-    font-size: 12vmin;
     color: white;
+    font-size: 12vmin;
 }
 
 .dynamic-menu {
-    width: 100%;
-    height: 89vh;
     display: flex;
     flex-direction: column;
+    height: 89vh;
     justify-content: center;
+    width: 100%;
 }
 
 .dynamic-menu * {
@@ -240,9 +248,8 @@ h2 {
 }
 
 .menu-splitter {
-    height: 4px;
-    width: 50%;
-    background-color: hsl(188, 92%, 54%);
     align-self: center;
     border-radius: 2px;
+    height: 4px;
+    width: 50%;
 }
